3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Commit combat rebalancing.  Combat is slower now, so less deadly.  If player
is idle, they get faster hp/sp regen.  Allow generators to have limit on
number of monsters they generate before disappearing.  Starting characters
all have same stat total (re-rolling may make the distribution different,
but total will be the same).  Add weapon_speed as an object attributed,
and also add weapon_speed_left - distinct values fixes some odd speed
bugs.  Change encumberance for players - character can carry some portion
with no slowdown.  Allow more tuning for races (hp/sp/grace can be
customized more)
---
common/exp.c: Refine exp calculator (for dump) for monsters.  This
  isn't used in play, but system gave too much bonus for resistances
  and speed, resulting in skewed exp values when using the dump values.
common/living.c: Greatly reduce speed bonuses for high dex.  Reduce
  damage and to hit bonuses from strength.  Remove max_carry.  Improve
  disease handling - player gets speed penalty from worse disease.
  Change speed benefits from magical devices.  For players, give them
  extra hp/sp/grace based upon what the archetype says.  Reduce
  rate of increase of wc and damage from melee skill.  Implement new
  encumberance calculations.  Add code to calculate weapon speed.
common/loader.l: Add support for loading an saving weapon_speed and 
  weapon_speed_left.
doc/Developers/objects: Update notes for the generators to detail
  generator_limit
doc/Developers/protocol: Add note about sc protocol 1029 (change way weapon
  speed is calculated)
include/config.h: Add new defines related to encumberance handling.  Also